generator client {
  provider = "prisma-client"
  output   = "../lib/generated/prisma"
}

datasource db {
  provider = "postgresql"
}

enum UserRole {
  learner
  admin
}

enum GrammarStatus {
  not_started
  in_progress
  completed
}

enum DifficultyLevel {
  easy
  medium
  hard
}

enum QuizType {
  vocabulary
  grammar
}

enum SavedStudyItemType {
  vocabulary
  grammar
}

enum VocabularyLearningStage {
  learning
  review
  mastered
}

enum VocabularyStudySessionKind {
  new
  review
  topic
  seeded
}

enum VocabularyStudySessionStatus {
  active
  completed
  abandoned
}

enum VocabularyRating {
  forgot
  hard
  remembered
}

enum LearningGoal {
  JLPT_N5
  COMMUNICATION
  FROM_ZERO
}

enum KanaLevel {
  none
  hiragana
  hiragana_katakana
}

enum ExperienceLevel {
  new
  some
  returning
}

enum InitialLevel {
  absolute_beginner
  early_n5
  n5_review
}

model User {
  id                 String                   @id @default(uuid())
  fullName           String                   @map("full_name")
  email              String                   @unique
  passwordHash       String                   @map("password_hash")
  role               UserRole                 @default(learner)
  sessions           AuthSession[]
  vocabularyProgress UserVocabularyProgress[]
  quizAttempts       QuizAttempt[]
  activityLogs       ActivityLog[]
  chatLogs           ChatLog[]
  chatConversations  ChatConversation[]
  chatMessages       ChatConversationMessage[]
  savedStudyItems    SavedStudyItem[]
  learnerProfile     LearnerProfile?
  placementResult    PlacementResult?
  vocabularyStudySessions VocabularyStudySession[]
  createdAt          DateTime                 @default(now()) @map("created_at")
  updatedAt          DateTime                 @updatedAt @map("updated_at")

  @@map("users")
}

model LearnerProfile {
  id                  String          @id @default(uuid())
  userId              String          @unique @map("user_id")
  goal                LearningGoal
  kanaLevel           KanaLevel       @map("kana_level")
  dailyMinutes        Int             @map("daily_minutes")
  experience          ExperienceLevel
  preferredTopics     Json            @map("preferred_topics")
  coldStartScore      Int             @map("cold_start_score")
  coldStartReasons    Json            @map("cold_start_reasons")
  guideCompletedSteps Json            @map("guide_completed_steps")
  completedOnboarding Boolean         @default(false) @map("completed_onboarding")
  user                User            @relation(fields: [userId], references: [id], onDelete: Cascade)
  createdAt           DateTime        @default(now()) @map("created_at")
  updatedAt           DateTime        @updatedAt @map("updated_at")

  @@map("learner_profiles")
}

model PlacementResult {
  id               String       @id @default(uuid())
  userId           String       @unique @map("user_id")
  score            Int
  total            Int
  percentage       Int
  level            InitialLevel
  weakAreas        Json         @map("weak_areas")
  recommendedStart String       @map("recommended_start")
  user             User         @relation(fields: [userId], references: [id], onDelete: Cascade)
  completedAt      DateTime     @map("completed_at")
  createdAt        DateTime     @default(now()) @map("created_at")
  updatedAt        DateTime     @updatedAt @map("updated_at")

  @@map("placement_results")
}

model AuthSession {
  id        String   @id @default(uuid())
  userId    String   @map("user_id")
  tokenHash String   @unique @map("token_hash")
  expiresAt DateTime @map("expires_at")
  user      User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  createdAt DateTime @default(now()) @map("created_at")

  @@index([userId])
  @@map("auth_sessions")
}

model Vocabulary {
  id                 Int                      @id
  japanese           String
  hiragana           String
  romaji             String
  vietnamese         String
  type               String
  topic              String
  topicKey           String                   @default("other") @map("topic_key")
  partOfSpeech       String                   @default("expression") @map("part_of_speech")
  imageUrl           String?                  @map("image_url")
  exampleJapanese    String                   @map("example_japanese")
  exampleVietnamese  String                   @map("example_vietnamese")
  userProgress       UserVocabularyProgress[]
  knowledgeChunks    KnowledgeChunk[]
  studySessionItems  VocabularyStudySessionItem[]
  createdAt          DateTime                 @default(now()) @map("created_at")
  updatedAt          DateTime                 @updatedAt @map("updated_at")

  @@map("vocabulary")
}

model Grammar {
  id                 Int              @id
  pattern            String
  meaning            String
  structure          String
  usageNote          String           @map("usage_note")
  exampleJapanese    String           @map("example_japanese")
  exampleVietnamese  String           @map("example_vietnamese")
  difficulty         DifficultyLevel
  status             GrammarStatus    @default(not_started)
  knowledgeChunks    KnowledgeChunk[]
  createdAt          DateTime         @default(now()) @map("created_at")
  updatedAt          DateTime         @updatedAt @map("updated_at")

  @@map("grammar")
}

model QuizQuestion {
  id              Int              @id
  question        String
  type            QuizType
  difficulty      DifficultyLevel
  topic           String
  correctAnswer   String           @map("correct_answer")
  explanation     String
  answers         QuizAnswer[]
  knowledgeChunks KnowledgeChunk[]
  createdAt       DateTime         @default(now()) @map("created_at")
  updatedAt       DateTime         @updatedAt @map("updated_at")

  @@map("quiz_questions")
}

model QuizAnswer {
  id          String       @id @default(uuid())
  questionId  Int          @map("question_id")
  answerKey   String       @map("answer_key")
  answerText  String       @map("answer_text")
  question    QuizQuestion @relation(fields: [questionId], references: [id], onDelete: Cascade)

  @@unique([questionId, answerKey])
  @@map("quiz_answers")
}

model UserVocabularyProgress {
  userId         String                  @map("user_id")
  vocabularyId   Int                     @map("vocabulary_id")
  stage          VocabularyLearningStage @default(learning)
  repetitions    Int                     @default(0)
  intervalDays   Int                     @default(0) @map("interval_days")
  easeFactor     Float                   @default(2.5) @map("ease_factor")
  lastQuality    Int?                    @map("last_quality")
  lapses         Int                     @default(0)
  lastReviewedAt DateTime?               @map("last_reviewed_at")
  dueAt          DateTime                @default(now()) @map("due_at")
  createdAt      DateTime                @default(now()) @map("created_at")
  updatedAt      DateTime                @updatedAt @map("updated_at")
  user           User                    @relation(fields: [userId], references: [id], onDelete: Cascade)
  vocabulary     Vocabulary              @relation(fields: [vocabularyId], references: [id], onDelete: Cascade)

  @@id([userId, vocabularyId])
  @@index([userId, dueAt])
  @@map("user_vocabulary_progress")
}

model VocabularyStudySession {
  id              String                       @id @default(uuid())
  userId          String                       @map("user_id")
  kind            VocabularyStudySessionKind
  topicKey        String?                      @map("topic_key")
  seedVocabularyId Int?                        @map("seed_vocabulary_id")
  status          VocabularyStudySessionStatus @default(active)
  currentPosition Int                          @default(0) @map("current_position")
  totalItems      Int                          @map("total_items")
  user            User                         @relation(fields: [userId], references: [id], onDelete: Cascade)
  items           VocabularyStudySessionItem[]
  createdAt       DateTime                     @default(now()) @map("created_at")
  updatedAt       DateTime                     @updatedAt @map("updated_at")
  completedAt     DateTime?                    @map("completed_at")

  @@index([userId, status, kind, topicKey])
  @@map("vocabulary_study_sessions")
}

model VocabularyStudySessionItem {
  sessionId    String                 @map("session_id")
  vocabularyId Int                    @map("vocabulary_id")
  position     Int
  rating       VocabularyRating?
  answeredAt   DateTime?              @map("answered_at")
  session      VocabularyStudySession @relation(fields: [sessionId], references: [id], onDelete: Cascade)
  vocabulary   Vocabulary             @relation(fields: [vocabularyId], references: [id], onDelete: Cascade)

  @@id([sessionId, vocabularyId])
  @@unique([sessionId, position])
  @@map("vocabulary_study_session_items")
}

model QuizAttempt {
  id         String   @id @default(uuid())
  userId     String   @map("user_id")
  quizType   QuizType @map("quiz_type")
  score      Int
  total      Int
  percentage Int
  user       User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  createdAt  DateTime @default(now()) @map("created_at")

  @@map("quiz_attempts")
}

model ActivityLog {
  id              String   @id @default(uuid())
  userId          String   @map("user_id")
  type            String
  content         String
  topic           String?
  result          String?
  score           Int?
  durationMinutes Int?     @map("duration_minutes")
  user            User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  createdAt       DateTime @default(now()) @map("created_at")

  @@map("activity_logs")
}

model ChatLog {
  id          String   @id @default(uuid())
  userId      String?  @map("user_id")
  message     String
  answer      String
  provider    String
  sourcesJson Json?    @map("sources_json")
  user        User?    @relation(fields: [userId], references: [id], onDelete: SetNull)
  createdAt   DateTime @default(now()) @map("created_at")

  @@map("chat_logs")
}

model ChatConversation {
  id        String                    @id @default(uuid())
  userId    String                    @map("user_id")
  title     String
  user      User                      @relation(fields: [userId], references: [id], onDelete: Cascade)
  messages  ChatConversationMessage[]
  createdAt DateTime                  @default(now()) @map("created_at")
  updatedAt DateTime                  @updatedAt @map("updated_at")

  @@index([userId, updatedAt])
  @@map("chat_conversations")
}

model ChatConversationMessage {
  id             String           @id @default(uuid())
  conversationId String           @map("conversation_id")
  userId         String           @map("user_id")
  role           String
  content        String
  provider       String?
  sourcesJson    Json?            @map("sources_json")
  quizCardsJson  Json?            @map("quiz_cards_json")
  quizStateJson  Json?            @map("quiz_state_json")
  conversation   ChatConversation @relation(fields: [conversationId], references: [id], onDelete: Cascade)
  user           User             @relation(fields: [userId], references: [id], onDelete: Cascade)
  createdAt      DateTime         @default(now()) @map("created_at")

  @@index([conversationId, createdAt])
  @@index([userId, createdAt])
  @@map("chat_conversation_messages")
}

model SavedStudyItem {
  id          String             @id @default(uuid())
  userId      String             @map("user_id")
  type        SavedStudyItemType
  sourceType  String             @map("source_type")
  sourceId    String             @map("source_id")
  itemKey     String             @map("item_key")
  title       String
  reading     String?
  level       String?
  meaning     String?
  note        String?
  example     String?
  rawPayload  Json               @map("raw_payload")
  user        User               @relation(fields: [userId], references: [id], onDelete: Cascade)
  createdAt   DateTime           @default(now()) @map("created_at")
  updatedAt   DateTime           @updatedAt @map("updated_at")

  @@unique([userId, type, itemKey])
  @@index([userId, type])
  @@map("saved_study_items")
}

model NewsArticle {
  id          String    @id @default(uuid())
  sourceUrl   String    @unique @map("source_url")
  provider    String
  title       String
  level       String
  category    String?
  articleText String    @map("article_text")
  imageUrl    String?   @map("image_url")
  audioUrl    String?   @map("audio_url")
  publishedAt DateTime? @map("published_at")
  questions   Json
  levelStats  Json      @default("[]") @map("level_stats")
  vocabulary  Json
  grammar     Json
  rawPayload   Json      @map("raw_payload")
  createdAt   DateTime  @default(now()) @map("created_at")
  updatedAt   DateTime  @updatedAt @map("updated_at")

  @@map("news_articles")
}

model KnowledgeChunk {
  id           String        @id @default(uuid())
  sourceType   String        @map("source_type")
  sourceId     String        @map("source_id")
  title        String
  content      String
  embedding    Json?
  vocabularyId Int?          @map("vocabulary_id")
  grammarId    Int?          @map("grammar_id")
  quizId       Int?          @map("quiz_id")
  vocabulary   Vocabulary?   @relation(fields: [vocabularyId], references: [id], onDelete: Cascade)
  grammar      Grammar?      @relation(fields: [grammarId], references: [id], onDelete: Cascade)
  quiz         QuizQuestion? @relation(fields: [quizId], references: [id], onDelete: Cascade)
  createdAt    DateTime      @default(now()) @map("created_at")

  @@index([sourceType, sourceId])
  @@map("knowledge_chunks")
}
